--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-slideshow-image": "^3.4.6",
+    "save-html-as-image": "^1.5.2",
     "sweetalert2": "^11.0.16"
   },
   "devDependencies": {
